--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,9 @@ jobs:
           path: frontend
 
       - name: Set up Go
-        uses: actions/setup-go@v2.1.2
+        uses: actions/setup-go@v2
         with:
-          go-version: 1.13
+          go-version: '^1.13.1'
 
       - name: Use Node.js
         uses: actions/setup-node@v1
