update go-pg to v10 and added approved books

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -17,7 +17,7 @@ sessions:
 app:
   devel_mode: yes
   files_path: "/mnt/ssd/sopds/books/_Lib.rus.ec - Официальная/lib.rus.ec"
-  users_path: "users-arc/"
+  users_path: "/mnt/ssd/sopds/books/users-arc/"
 
 email:
   user: no-reply@example.com
