added link generate for cdn

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -19,6 +19,8 @@ app:
   files_path: "/mnt/ssd/sopds/books/_Lib.rus.ec - Официальная/lib.rus.ec"
   users_path: "/mnt/ssd/sopds/books/users-arc/"
   cdn: ""
+  book_cdn_key: ""
+  file_book_cdn: ""
 
 email:
   user: no-reply@example.com
