--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,46 @@
-name: ci
+# Name of the job
+name: Build and push Docker image
 
+# Trigger the job on push events to tags matching 'v*' (e.g. v1.0, v20.15.10)
 on:
   push:
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'v*'
 
 jobs:
   docker:
+    # Run the job on the latest version of Ubuntu
     runs-on: ubuntu-latest
     steps:
-      - name: Get the version
+      # Extract the version from the Git tag
+      - name: Extract version from Git tag
         id: get_version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
-      -
-        name: Set up QEMU
+      # Set up QEMU, which allows the Docker daemon to build and run multi-architecture images
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      # Set up Docker Buildx, which enables building and pushing of multi-architecture images
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      # Log in to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      # Build and push the Docker image
+      - name: Build and push Docker image
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          # Set the build context to the current directory
+          context: .
+          # Push the built image to DockerHub
           push: true
+          # Set the tags for the built image
           tags: |
             aladex/gopds-api:${{ steps.get_version.outputs.VERSION }}
             aladex/gopds-api:latest
+          # Pass the extracted version as an argument to the build process
+          build_args:
+            - VERSION=${{ steps.get_version.outputs.VERSION }}
