--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,30 +12,40 @@ jobs:
     # Run the job on the latest version of Ubuntu
     runs-on: ubuntu-latest
     steps:
+      # Check out the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       # Extract the version from the Git tag
       - name: Extract version from Git tag
         id: get_version
-        run: echo "VERSION=$(echo $GITHUB_REF | cut -d / -f 3)" >> $GITHUB_OUTPUT
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
       # Set up QEMU, which allows the Docker daemon to build and run multi-architecture images
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
+
       # Set up Docker Buildx, which enables building and pushing of multi-architecture images
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
+
       # Log in to DockerHub
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       # Build and push the Docker image
       - name: Build and push Docker image
-        id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
-          # Push the built image to DockerHub
+          context: .
           push: true
-          # Set the tags for the built image
           tags: |
-            aladex/gopds-api:${{ steps.get_version.outputs.VERSION }}
+            aladex/gopds-api:${{ env.VERSION }}
             aladex/gopds-api:latest
+
+      # Logout from DockerHub
+      - name: Log out from DockerHub
+        run: docker logout
