--- a/booksdump-frontend/package.json
+++ b/booksdump-frontend/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/styles": "^5.16.4",
     "@mui/x-data-grid": "^7.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
