--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,5 @@
-# Name of the job
 name: Build and push Docker image
 
-# Trigger the job on push events to tags matching 'v*' (e.g. v1.0, v20.15.10)
 on:
   push:
     tags:
@@ -9,43 +7,37 @@ on:
 
 jobs:
   docker:
-    # Run the job on the latest version of Ubuntu
     runs-on: ubuntu-latest
     steps:
-      # Check out the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Extract the version from the Git tag
       - name: Extract version from Git tag
         id: get_version
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
-      # Set up QEMU, which allows the Docker daemon to build and run multi-architecture images
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
-      # Set up Docker Buildx, which enables building and pushing of multi-architecture images
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to DockerHub
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build and push the Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
+          build-args: |
+            VERSION=${{ env.VERSION }}
           tags: |
             aladex/gopds-api:${{ env.VERSION }}
             aladex/gopds-api:latest
 
-      # Logout from DockerHub
       - name: Log out from DockerHub
         run: docker logout
