Update app name in manifest.json to "Лепробиблиотека для своих".

--- a/booksdump-frontend/public/manifest.json
+++ b/booksdump-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Booksdump",
-  "name": "Create React App Sample",
+  "name": "Лепробиблиотека для своих",
   "icons": [
     {
       "src": "favicon.ico",
