Update manifest.json with new app name and short name in English.

--- a/booksdump-frontend/public/manifest.json
+++ b/booksdump-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Booksdump",
-  "name": "Лепробиблиотека для своих",
+  "short_name": "Leprolibrary",
+  "name": "Leprolibrary. Secret library for leprosorium",
   "icons": [
     {
       "src": "favicon.ico",
