--- a/booksdump-frontend/package.json
+++ b/booksdump-frontend/package.json
@@ -4,43 +4,43 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@date-io/date-fns": "^3.0.0",
+    "@date-io/date-fns": "^3.2.1",
     "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.4",
-    "@mui/lab": "^5.0.0-alpha.172",
-    "@mui/material": "^5.16.4",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/styles": "^5.16.4",
-    "@mui/x-data-grid": "^7.11.0",
-    "@mui/x-date-pickers": "^7.11.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.103",
-    "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "axios": "^1.11.0",
-    "date-fns": "^3.6.0",
-    "dayjs": "^1.11.12",
-    "env-cmd": "^10.1.0",
-    "i18next": "^23.12.2",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.5.2",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/lab": "^7.0.1-beta.20",
+    "@mui/material": "^5.18.0",
+    "@mui/styled-engine-sc": "^7.3.6",
+    "@mui/styles": "^5.18.0",
+    "@mui/x-data-grid": "^7.29.12",
+    "@mui/x-date-pickers": "^7.29.4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.3",
+    "@types/qrcode": "^1.5.6",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "env-cmd": "^11.0.0",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "js-cookie": "^3.0.5",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.0",
-    "react-router-dom": "^6.25.1",
+    "react-i18next": "^16.5.0",
+    "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.12",
+    "styled-components": "^6.1.19",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "env-cmd -f .env.development react-scripts start",
