Refactor components to replace button elements with Box components for consistent styling

--- a/booksdump-frontend/package.json
+++ b/booksdump-frontend/package.json
@@ -9,11 +9,11 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^5.18.0",
-    "@mui/lab": "^7.0.1-beta.20",
-    "@mui/material": "^5.18.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/lab": "^6.0.0-beta.15",
+    "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^7.3.6",
-    "@mui/styles": "^5.18.0",
+    "@mui/system": "^7.3.6",
     "@mui/x-data-grid": "^7.29.12",
     "@mui/x-date-pickers": "^7.29.4",
     "@testing-library/jest-dom": "^6.9.1",
@@ -33,13 +33,13 @@
     "i18next-http-backend": "^3.0.2",
     "js-cookie": "^3.0.5",
     "qrcode": "^1.5.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-i18next": "^16.5.0",
     "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
-    "typescript": "^4.9.5",
+    "typescript": "^5.9.3",
     "web-vitals": "^5.1.0"
   },
   "scripts": {
