--- a/booksdump-frontend/package.json
+++ b/booksdump-frontend/package.json
@@ -9,13 +9,13 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^6.1.0",
-    "@mui/lab": "^6.0.0-beta.15",
-    "@mui/material": "^6.1.0",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/lab": "^7.0.1-beta.20",
+    "@mui/material": "^6.5.0",
     "@mui/styled-engine-sc": "^7.3.6",
-    "@mui/system": "^7.3.6",
-    "@mui/x-data-grid": "^7.29.12",
-    "@mui/x-date-pickers": "^7.29.4",
+    "@mui/system": "^6.5.0",
+    "@mui/x-data-grid": "^8.23.0",
+    "@mui/x-date-pickers": "^7.0.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
@@ -36,7 +36,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-i18next": "^16.5.0",
-    "react-router-dom": "^6.30.2",
+    "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
     "typescript": "^5.9.3",
@@ -68,5 +68,10 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6"
+  },
+  "resolutions": {
+    "nth-check": ">=2.0.1",
+    "postcss": ">=8.4.31",
+    "webpack-dev-server": "^4.15.1"
   }
 }
